--- a/index.html
+++ b/index.html
@@ -248,12 +248,12 @@
                </div>
                <div class="call-back-form__item">
                   <ul class="call-back-address">
-                     <li class="call-back-address__item _icon-mappng">It is a long established fact that</li>
+                     <li class="call-back-address__item _icon-map">It is a long established fact that</li>
                      <li class="call-back-address__item">
-                        <a href="tel:0923456789" class="call-back-address__link _icon-mobilepng">0923456789</a>
+                        <a href="tel:0923456789" class="call-back-address__link _icon-mobile">0923456789</a>
                      </li>
                      <li class="call-back-address__item">
-                        <a href="mailto:contact@gmail.com.ua" class="call-back-address__link _icon-mailpng">contact@gmail.com.ua</a>
+                        <a href="mailto:contact@gmail.com.ua" class="call-back-address__link _icon-mail">contact@gmail.com.ua</a>
                      </li>
                   </ul>
                </div>
@@ -267,16 +267,16 @@
          <div class="footer__inner">
             <ul class="footer-social">
                <li class="footer-social__item">
-                  <a href="#" class="footer-social__link _icon-facebookpng"></a>
+                  <a href="#" class="footer-social__link _icon-facebook"></a>
                </li>
                <li class="footer-social__item">
-                  <a href="#" class="footer-social__link _icon-twitterpng"></a>
+                  <a href="#" class="footer-social__link _icon-twitter"></a>
                </li>
                <li class="footer-social__item">
-                  <a href="#" class="footer-social__link _icon-linkedinpng"></a>
+                  <a href="#" class="footer-social__link _icon-linkedin"></a>
                </li>
                <li class="footer-social__item">
-                  <a href="#" class="footer-social__link _icon-instagrampng"></a>
+                  <a href="#" class="footer-social__link _icon-instagram"></a>
                </li>
              </ul>
              <div class="footer-copir">
